--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -19,8 +19,9 @@
    
 </head>
 <body>
+  
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top d-flex justify-content-space-between">
-        <a class="navbar-brand mx-2 fw-bold" href="#" style="color: teal;">Todo</a>
+        <a class="navbar-brand mx-2 fw-bold" href="#" style="color: teal;"><img src="{% static 'img\vector\default-monochrome-black.svg' %}" alt="" style="width: 100px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
   </button>
