made modifications for smooth operation

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -53,9 +53,9 @@
             <a href="{% provider_login_url 'google' %}" class="btn-google">
                 <button type="button">Google</button>
             </a>
-            <a href="{% provider_login_url 'facebook' %}">
+            <!-- <a href="{% provider_login_url 'facebook' %}">
                 <button type="button">Facebook</button>
-            </a>
+            </a> -->
         
         <!-- <button type="button">Email</button> -->
         
