--- a/dashboard/templates/dashboard/task.html
+++ b/dashboard/templates/dashboard/task.html
@@ -121,6 +121,7 @@
                 </div>
                 
             </div>
+            
 
     </div>
     
@@ -157,16 +158,16 @@
                 let title = `<span class="title">${list[i].title} </span> `
 
                 if (list[i].completed == true){
-                    title = `<del class="title">${list[i].title} </del>`
+                    title = `<strike class="title" >${list[i].title}</strike>`
                 }
                 let item = `<div id='data-row-${i}' class='task-wrapper flex-wrapper d-flex justify-content-center align-items-center'>
                     <div style='flex:7'>
-                       
-                        ${title} 
+                      ${title}
                     </div>
  
                     <div style='flex:1'>
-                        <button class='btn btn-success edit'>Edit</button>
+                        <button class='btn btn-success edit'>
+                        Edit</button>
                     </div>
 
                     <div style='flex:1'>
@@ -178,9 +179,9 @@
             };
             for (var i in list){
                 let editBtn = document.getElementsByClassName('edit')[i]
-
+               
                 let deleteBtn = document.getElementsByClassName('delete')[i]
-
+                
                 let strike = document.getElementsByClassName('title')[i]
                 
                 editBtn.addEventListener('click',(function(item){
@@ -201,6 +202,7 @@
                 strike.addEventListener('click',(function(item){
                     return function(){
                         doUndo(item)
+                        strike.addEventListener=true
                     }
                 })(list[i]))
             }
@@ -233,7 +235,9 @@
                 "Content-Type": "application/json",
                 "X-CSRFToken":csrftoken
             },
-            body: JSON.stringify({'title':task})
+            body: JSON.stringify({'title':task,
+                'completed': activeItem ? activeItem.completed : false
+            })
         })
         .then(response => {
             if (!response.ok) {
@@ -313,7 +317,7 @@ function doUndo(item){
 
     })
     .then(response =>{
-        taskForm.reset()
+        console.log(item.completed)
         listItems()
     })
 
