--- a/dashboard/templates/dashboard/task.html
+++ b/dashboard/templates/dashboard/task.html
@@ -1,4 +1,5 @@
 {% extends "users/layout.html" %}
+{% load static %}
 
 {% block body %}
 
@@ -48,6 +49,7 @@
     width: 100%;
 }
 
+
     .input{
         display: flex;
         gap: 1rem;
@@ -60,6 +62,10 @@
     }
     .btn-success{
         background-color: teal;
+      
+    }
+    .btn-danger{
+     
     }
 
     .flex-wrapper{
@@ -166,15 +172,18 @@
                     </div>
  
                     <div style='flex:1'>
-                        <button class='btn btn-success edit'>
+                        <button class='btn btn-success edit d-flex align-item-center justify-content-center'>
+                             <img src="{% static 'img/edit.png' %}" alt="" style="width:1.5rem;">
                         Edit</button>
                     </div>
 
                     <div style='flex:1'>
-                        <button class='btn btn-danger delete'>Delete</button>
+                        <button class='btn btn-danger delete d-flex align-item-center justify-content-center'>
+                            <img src="{% static 'img/garbage.png' %}" alt="" style="width:1.5rem;">
+                            Delete</button>
                     </div>
                     </div>`
-                
+            
                 taskContainer.innerHTML += item
             };
             for (var i in list){
