--- a/dashboard/templates/dashboard/task.html
+++ b/dashboard/templates/dashboard/task.html
@@ -57,11 +57,11 @@
 
     .btn-outline-success{
         width: 7rem;
-        padding: 0;
         border-color: teal;
     }
     .btn-success{
-        background-color: teal;
+        background-color: #202020;
+        color: #ffff;
       
     }
     .btn-danger{
@@ -113,7 +113,7 @@
         
             <div class="col-md-10 mx-auto mb-3" id="workspace">
                 <div class="img">
-                    <img src="{% static 'img/cover.png' %}" alt="" style="width:25rem;">
+                    <img src="{% static 'img/logo.png' %}" alt="" style="width:5rem;">
                 </div>
                 <form action="" method="POST" id="task-form">
                     {% csrf_token %}
