--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -32,7 +32,10 @@
 }
 </style>
 
-<div class="content">
+<div class="content" style="min-height: 100vh;">
+    <div class="img">
+        <img src="{% static 'img/logo.png' %}" alt="" style="width:5rem;">
+    </div>
     <h3>Sign Up</h3>
     <form action="" method="post">
         {% csrf_token %}
